fixed deleted comments widget padding & aligned its styling with the 'show more' widget

--- a/app/assets/stylesheets/comment_threads.scss
+++ b/app/assets/stylesheets/comment_threads.scss
@@ -1,7 +1,7 @@
 .post--comments-thread-wrapper {
   .post--comments-thread {
-    .widget--body {
-      padding: 0;
+    .widget--body:not(.deleted-comments) {
+        padding: 0;
 
       .comment {
         margin: 0;
